Regression: Expand operator on open boundaries causes crash #100479

Closed
opened 2022-08-18 15:59:06 +02:00 by Julien Kaspar · 11 comments
Member

System Information
Operating system: Linux-5.15.0-46-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.85.02

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-08-18 05:55, hash: 0aaff9a07d
Worked: version 3.3.0 Beta
Caused by d7cfb6ac71

i couldn't get exact dates of when the bug was introduced. But it's older than the daily alpha build from the 8th of August.

Short description of error
When using the expand operator in sculpt mode via the shortcuts Shift A or Shift W on an open boundary, it will expand a mask or face set along the edge loop of that boundary.
In recent alpha versions of Blender this will cause a crash.

Exact steps for others to reproduce the error

  • Delete one side of the default cube in edit mode
  • Enter sculpt mode
  • Use the face set expand operator with Shift W while pointing at the open boundary
**System Information** Operating system: Linux-5.15.0-46-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.85.02 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-08-18 05:55, hash: `0aaff9a07d` Worked: version 3.3.0 Beta Caused by d7cfb6ac71 i couldn't get exact dates of when the bug was introduced. But it's older than the daily alpha build from the 8th of August. **Short description of error** When using the expand operator in sculpt mode via the shortcuts `Shift A` or `Shift W` on an open boundary, it will expand a mask or face set along the edge loop of that boundary. In recent alpha versions of Blender this will cause a crash. **Exact steps for others to reproduce the error** - Delete one side of the default cube in edit mode - Enter sculpt mode - Use the face set expand operator with `Shift W` while pointing at the open boundary
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Seems to be reading freed/uninitialized memory. Trace:

>	blender.exe!sculpt_boundary_edit_data_init(SculptSession * ss, SculptBoundary * boundary, const PBVHVertRef initial_vertex, const float radius) Řádek 438	C

 	blender.exe!SCULPT_boundary_data_init(Object * object, Brush * brush, const PBVHVertRef initial_vertex, const float radius) Řádek 540	C
 	blender.exe!sculpt_expand_boundary_topology_falloff_create(Object * ob, const PBVHVertRef v) Řádek 612	C
 	blender.exe!sculpt_expand_falloff_factors_from_vertex_and_symm_create(ExpandCache * expand_cache, Sculpt * sd, Object * ob, const PBVHVertRef v, eSculptExpandFalloffType falloff_type) Řádek 1048	C
 	blender.exe!sculpt_expand_invoke(bContext * C, wmOperator * op, const wmEvent * event) Řádek 2161	C
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, const wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Řádek 1412	C++
 	blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const char * kmi_idname) Řádek 2446	C++
 	blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Řádek 2838	C++
 	blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Řádek 3164	C++
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Řádek 3302	C++
 	blender.exe!wm_event_do_region_handlers(bContext * C, wmEvent * event, ARegion * region) Řádek 3722	C++
 	blender.exe!wm_event_do_handlers_area_regions(bContext * C, wmEvent * event, ScrArea * area) Řádek 3752	C++
 	blender.exe!wm_event_do_handlers(bContext * C) Řádek 3947	C++
 	blender.exe!WM_main(bContext * C) Řádek 640	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Řádek 550	C
Seems to be reading freed/uninitialized memory. Trace: ``` > blender.exe!sculpt_boundary_edit_data_init(SculptSession * ss, SculptBoundary * boundary, const PBVHVertRef initial_vertex, const float radius) Řádek 438 C blender.exe!SCULPT_boundary_data_init(Object * object, Brush * brush, const PBVHVertRef initial_vertex, const float radius) Řádek 540 C blender.exe!sculpt_expand_boundary_topology_falloff_create(Object * ob, const PBVHVertRef v) Řádek 612 C blender.exe!sculpt_expand_falloff_factors_from_vertex_and_symm_create(ExpandCache * expand_cache, Sculpt * sd, Object * ob, const PBVHVertRef v, eSculptExpandFalloffType falloff_type) Řádek 1048 C blender.exe!sculpt_expand_invoke(bContext * C, wmOperator * op, const wmEvent * event) Řádek 2161 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, const wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Řádek 1412 C++ blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const char * kmi_idname) Řádek 2446 C++ blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Řádek 2838 C++ blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Řádek 3164 C++ blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Řádek 3302 C++ blender.exe!wm_event_do_region_handlers(bContext * C, wmEvent * event, ARegion * region) Řádek 3722 C++ blender.exe!wm_event_do_handlers_area_regions(bContext * C, wmEvent * event, ScrArea * area) Řádek 3752 C++ blender.exe!wm_event_do_handlers(bContext * C) Řádek 3947 C++ blender.exe!WM_main(bContext * C) Řádek 640 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Řádek 550 C ```
Author
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Author
Member

@JosephEagar You interested in looking into this?

@JosephEagar You interested in looking into this?
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Crash introduced in- d7cfb6ac71

Crash introduced in- d7cfb6ac71
Pratik Borhade changed title from Expand operator on open boundaries causes crash to Regression: Expand operator on open boundaries causes crash 2022-08-19 06:55:07 +02:00

This issue was referenced by d7b33cd8c8

This issue was referenced by d7b33cd8c881b9a4c13eef9b6bd6192a56710f78
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-08-31 19:20:48 +02:00

This issue was referenced by 32b766223a

This issue was referenced by 32b766223a1b2a562e657a729e7d9f2926d42417
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100479
No description provided.