Sculpt: Fix T100479: Memory corruption in sculpt_boundary_edit_data_init